[package]
name = "hooker"
version = "0.1.0"
edition = "2021"
authors = ["Roee Shoshani"]
description = "a helper for hooking functions in x64"
repository = "https://github.com/roeeshoshani/hooker"
license = "MIT"
keywords = ["hook", "x86"]
categories = ["embedded", "no-std"]

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }
thiserror-no-std = "2.0.2"
zydis-sys = "0.1.1"

[features]
std = [ "thiserror-no-std/std" ]

[dev-dependencies]
memmap = "0.7.0"
proc-maps = "0.3.2"
rand = "0.8.5"
region = "3.0.1"
