[package]
name = "hooker"
version = "0.1.4"
edition = "2021"
authors = ["Roee Shoshani"]
description = "a helper for hooking functions in x64"
repository = "https://github.com/roeeshoshani/hooker"
license = "MIT"
keywords = ["hook", "x86"]
categories = ["embedded", "no-std"]

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }
thiserror-no-std = "2.0.2"
zydis-sys = "0.1.1"

[features]
std = [ "thiserror-no-std/std", "arrayvec/std" ]

[dev-dependencies]
region = "3.0.1"
